remove showbbox argument of epsfile class
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@1565 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -148,6 +148,8 @@ TODO for 0.6:
   - data module:
     - removed, it all lives in the graph.data module now, while before it
       was splitted into two separate modules
+  - epsfile module:
+    - remove showbbox argument of epsfile class
 
 0.5.1 (2004/01/22):
   - distribution:
