--- a/CHANGES
+++ b/CHANGES
@@ -149,7 +149,7 @@ TODO for 0.6:
     - removed, it all lives in the graph.data module now, while before it
       was splitted into two separate modules
   - epsfile module:
-    - remove showbbox argument of epsfile class
+    - removed showbbox argument of epsfile class
 
 0.5.1 (2004/01/22):
   - distribution:
