*** empty log message ***
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@1570 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/manual/intro.tex
+++ b/manual/intro.tex
@@ -19,7 +19,7 @@ in publication-ready quality.
 The \PyX{} package is split in several modules, which can be
 categorised in the following groups
 
-\begin{tableii}{ll}{textit}{Functionality}{Modules}
+\begin{tableii}{l|l}{textrm}{Functionality}{Modules}
   basic graphics functionality &   \module{canvas}, \module{path}, \module{deco}, \module{style}, \module{color},
   and \module{connector}
   \\
@@ -39,7 +39,7 @@ module namespace by using
 from pyx import *
 \end{verbatim}
 at the beginning of your Python program.  However, in order to prevent
-namespace pollution, you may also simply use \bfcode{import pyx}.
+namespace pollution, you may also simply use \samp{import pyx}.
 Throughout this manual, we shall always assume that former import line
 form has been used.
 
